--- a/app/src/main/res/layout/loginlayout.xml
+++ b/app/src/main/res/layout/loginlayout.xml
@@ -1,23 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
   <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="20dp"
+    android:background="@color/textColor"
+    tools:context=".MainActivity"
     >
-    <EditText
+
+  <TextView
+      android:id="@+id/loginInput_error"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/loginInputError"
+      android:layout_marginBottom="20dp"
+      android:visibility="gone"
+      style="@style/error"
+      />
+  <TextView
+      android:id="@+id/loginInputLength_error"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/loginInputLengthError"
+      android:layout_marginBottom="20dp"
+      android:visibility="gone"
+      style="@style/error"
+      />
+
+  <EditText
         android:id="@+id/text_username"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:hint="@string/lbusername"
         android:background="@color/inputBackground"
         android:inputType="text"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:drawableStart="@drawable/ic_person_black_24dp"
         android:drawablePadding="20dp"
-        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
 
         android:autofillHints="@string/lbusername"
     />
@@ -29,13 +52,20 @@
         android:inputType="textPassword"
         android:hint="@string/lbpassword"
         android:layout_marginTop="40dp"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:background="@color/inputBackground"
         android:drawableStart="@drawable/ic_lock_black_24dp"
         android:drawablePadding="20dp"
-        android:paddingLeft="10dp"
+        android:paddingStart="10dp"
         android:autofillHints="@string/lbpassword"
     />
+  <TextView
+      android:id="@+id/register_link"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/neu_registierung"
+      />
+
     <Button
         android:id="@+id/login_button"
         android:layout_width="match_parent"
@@ -43,7 +73,7 @@
         android:text="@string/btnlogin"
         android:background="@color/colorPrimary"
         android:textColor="@color/textColor"
-        android:textSize="18dp"
+        android:textSize="18sp"
         android:layout_marginTop="60dp"
     />
 
