--- a/app/src/main/res/layout/registrationlayout.xml
+++ b/app/src/main/res/layout/registrationlayout.xml
@@ -51,7 +51,7 @@
         />
 
     <EditText
-        android:id="@+id/text_password"
+        android:id="@+id/register_text_password"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:hint="@string/lbpassword"
