--- a/app/src/main/res/layout/homepagelayout.xml
+++ b/app/src/main/res/layout/homepagelayout.xml
@@ -5,6 +5,12 @@
     android:layout_height="match_parent"
     android:background="@color/textColor">
 
+    <ListView
+        android:id="@+id/added_device_list"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+    />
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -20,7 +26,7 @@
         android:layout_marginBottom="20dp"
         android:accessibilityPaneTitle="@string/feedpage_title"
         app:borderWidth="0dp"
-        android:src="@drawable/ic_add_black_24dp"
+        android:src="@drawable/ic_photo_camera_black_24dp"
         android:backgroundTint="@color/pink"
         android:clickable="true"
         android:visibility="gone"
