--- a/app/src/main/res/layout/devicecategorylayout.xml
+++ b/app/src/main/res/layout/devicecategorylayout.xml
@@ -4,15 +4,10 @@
     android:id="@+id/listItem"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginBottom="20dp"
-    android:orientation="horizontal">
+    android:layout_margin="10dp"
+    android:orientation="horizontal"
+    >
 
-    <ImageView
-        android:id="@+id/image_item"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ic_green_energy"
-    />
     <TextView
         android:id="@+id/item"
         android:layout_width="wrap_content"
