--- a/app/src/main/res/layout/homepagelayout.xml
+++ b/app/src/main/res/layout/homepagelayout.xml
@@ -1,14 +1,16 @@
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/textColor">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/textColor"
+    tools:context=".HomepageActivity">
 
     <ListView
         android:id="@+id/added_device_list"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        tools:listitem="@layout/deviceitem"
     />
 
 <LinearLayout
