--- a/app/src/main/res/layout/loginlayout.xml
+++ b/app/src/main/res/layout/loginlayout.xml
@@ -2,6 +2,7 @@
   <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -25,25 +26,33 @@
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/loginInputLengthError"
-      android:layout_marginBottom="20dp"
+      android:layout_marginBottom="40dp"
+      android:visibility="gone"
+      style="@style/error"
+      />
+  <TextView
+      android:id="@+id/auth_error"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/authError"
+      android:layout_marginBottom="30dp"
       android:visibility="gone"
       style="@style/error"
       />
 
   <EditText
-        android:id="@+id/text_username"
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:hint="@string/lbusername"
-        android:background="@color/inputBackground"
-        android:inputType="text"
-        android:textSize="18sp"
-        android:drawableStart="@drawable/ic_person_black_24dp"
-        android:drawablePadding="20dp"
-        android:paddingStart="10dp"
-
-        android:autofillHints="@string/lbusername"
-    />
+      android:id="@+id/text_emailLogin"
+      android:layout_width="match_parent"
+      android:layout_height="60dp"
+      android:inputType="textEmailAddress"
+      android:hint="Email"
+      android:textSize="18sp"
+      android:background="@color/inputBackground"
+      android:drawableStart="@drawable/ic_email_black_24dp"
+      android:drawablePadding="20dp"
+      android:paddingStart="10dp"
+      android:autofillHints="Email"
+      />
 
     <EditText
         android:id="@+id/text_password"
@@ -51,7 +60,7 @@
         android:layout_height="60dp"
         android:inputType="textPassword"
         android:hint="@string/lbpassword"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="20dp"
         android:textSize="18sp"
         android:background="@color/inputBackground"
         android:drawableStart="@drawable/ic_lock_black_24dp"
@@ -59,12 +68,6 @@
         android:paddingStart="10dp"
         android:autofillHints="@string/lbpassword"
     />
-  <TextView
-      android:id="@+id/register_link"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="@string/neu_registierung"
-      />
 
     <Button
         android:id="@+id/login_button"
@@ -74,7 +77,15 @@
         android:background="@color/colorPrimary"
         android:textColor="@color/textColor"
         android:textSize="18sp"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="30dp"
     />
+
+
+  <TextView
+      android:id="@+id/register_link"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:text="@string/neu_registierung"
+      />
 
     </LinearLayout>
