--- a/app/src/main/res/layout/homepagelayout.xml
+++ b/app/src/main/res/layout/homepagelayout.xml
@@ -13,6 +13,15 @@
         tools:listitem="@layout/deviceitem"
     />
 
+    <TextView
+        android:id="@+id/no_device_text"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:text="Sie haben momentan keine Geraete gespeichert."
+        android:visibility="gone"
+        android:gravity="center"
+    />
+
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="match_parent"
