--- a/app/src/main/res/drawable/drawable.xml
+++ b/app/src/main/res/drawable/drawable.xml
@@ -1,5 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#42000000" />
-    <corners android:radius="3dp" />
+    <gradient
+        android:startColor="#ffffff"
+        android:endColor="#ffffff"
+        android:angle="180"/>
+    <corners
+        android:radius="10dp"/>
 </shape>
