--- a/app/src/main/res/layout/deviceitem.xml
+++ b/app/src/main/res/layout/deviceitem.xml
@@ -3,30 +3,48 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/device_item"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:alpha="1"
+    android:background="@drawable/drawable"
+    android:layout_marginBottom="50dp"
+    android:focusableInTouchMode="true"
+    android:headerDividersEnabled="false"
+    android:padding="10dp">
 
-    <ImageView
-        android:id="@+id/item_icon_category"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
     <LinearLayout
-        android:id="@+id/device_block"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-    >
-    <TextView
-        android:id="@+id/item_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
-    <TextView
-        android:id="@+id/item_priority"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-    />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/inputBackground"
+        >
+        <TextView
+            android:id="@+id/item_category"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+        />
+
     </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        >
+
+        <TextView
+            android:id="@+id/item_description"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+        <TextView
+            android:id="@+id/item_priority"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            />
+
+
+    </LinearLayout>
+
 
 </LinearLayout>
