--- a/app/src/main/res/layout/communitylayout.xml
+++ b/app/src/main/res/layout/communitylayout.xml
@@ -1,21 +1,155 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:paddingEnd="10dp"
+    android:paddingStart="10dp"
+    android:paddingTop="10dp"
+    android:background="@color/deviceItemBackground"
     tools:context=".CommunityActivity">
 
     <TextView
         android:id="@+id/forum"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/forumWelcomeText"
+        android:layout_marginBottom="20dp"
+        android:gravity="center"
+        style="@style/communityWelcomeText"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="200dp"
+        android:orientation="vertical"
+        android:padding="20dp"
+        android:background="@drawable/drawable"
+        android:layout_gravity="center">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_energy"
+            android:layout_gravity="center"
+        />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:layout_marginTop="10dp">
+
+        <LinearLayout
+            android:id="@+id/sharewithfriend"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            >
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/ic_add_circle_outline_black_24dp"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/joinFriend"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:maxWidth="100dp"
+            style="@style/shareStyle"/>
+        </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/sharewithcommunity"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/authError"
+        android:orientation="vertical"
+        >
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/group"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/joinCommunity"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:maxWidth="100dp"
+            style="@style/shareStyle"/>
+
+</LinearLayout>
+        </LinearLayout>
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/extradarkgray"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"/>
+
+
+    <TextView
+        android:id="@+id/forum1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/forumWelcomeText1"
         android:layout_marginBottom="20dp"
-        android:visibility="gone"
-        style="@style/error"
+        android:gravity="center"
+        style="@style/communityWelcomeText"
         />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:minHeight="100dp"
+        android:orientation="horizontal"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:padding="20dp"
+        android:background="@drawable/drawable"
+        >
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_icons8_whatsapp"
+            android:layout_marginRight="20dp"
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_icons8_facebook"
+            android:layout_marginRight="20dp"
+
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_icons8_instagram"
+            android:layout_marginRight="20dp"
+
+            />
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@drawable/ic_icons8_twitter"
+            />
+
+    </LinearLayout>
+
 
     <include
         android:layout_width="fill_parent"
