--- a/app/src/main/res/layout/devicecategorylayout.xml
+++ b/app/src/main/res/layout/devicecategorylayout.xml
@@ -6,6 +6,8 @@
     android:layout_height="match_parent"
     android:layout_margin="10dp"
     android:orientation="horizontal"
+    android:layout_marginBottom="10dp"
+    android:background="@drawable/drawable"
     >
 
     <TextView
