--- a/app/src/main/res/layout/homepagelayout.xml
+++ b/app/src/main/res/layout/homepagelayout.xml
@@ -1,17 +1,22 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/deviceItemBackground"
+    android:background="@color/deviceBackground"
     tools:context=".HomepageActivity">
 
     <ListView
         android:id="@+id/added_device_list"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:dividerHeight="2dp"
-        android:layout_margin="20dp"
+        android:divider="@null"
+        android:dividerHeight="10.0sp"
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:listSelector="@color/inputBackground"
     />
 
@@ -19,7 +24,7 @@
         android:id="@+id/no_device_text"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
-        android:text="Sie haben momentan keine Geraete gespeichert."
+        android:text="@string/noSavedDevices"
         android:visibility="gone"
         android:gravity="center"
     />
@@ -28,20 +33,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:gravity="bottom"
+    android:layout_gravity="end|bottom"
     android:padding="0dp">
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end|bottom"
+        android:layout_marginEnd="35dp"
+        android:layout_marginBottom="20dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/ic_add_black_24dp"
+        app:borderWidth="0dp" />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floatingPink"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginRight="35dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="20dp"
-        android:accessibilityPaneTitle="@string/feedpage_title"
         app:borderWidth="0dp"
         android:src="@drawable/ic_photo_camera_black_24dp"
         android:backgroundTint="@color/pink"
         android:clickable="true"
+        android:focusable="true"
         android:visibility="gone"
         />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -49,12 +66,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginRight="35dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="20dp"
         app:borderWidth="0dp"
         android:src="@drawable/ic_devices_other_black_24dp"
         android:backgroundTint="@color/yellow"
         android:clickable="true"
+        android:focusable="true"
         android:visibility="gone"
         />
     <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -62,12 +80,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginRight="35dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="20dp"
         app:borderWidth="0dp"
         android:src="@drawable/ic_kitchen_black_24dp"
         android:backgroundTint="@color/blue"
         android:clickable="true"
+        android:focusable="true"
         android:visibility="gone"
         />
 
@@ -76,28 +95,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end|bottom"
-        android:layout_marginRight="35dp"
+        android:layout_marginEnd="35dp"
         android:layout_marginBottom="20dp"
-        android:accessibilityPaneTitle="@string/feedpage_title"
         app:borderWidth="0dp"
         android:src="@drawable/ic_clear_black_24dp"
         android:backgroundTint="@color/colorPrimary"
         android:visibility="gone"
         android:clickable="true"
+        android:focusable="true"
         />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_marginRight="35dp"
-        android:layout_marginBottom="20dp"
-        app:borderWidth="0dp"
-        android:src="@drawable/ic_add_black_24dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:clickable="true"
-       />
     <include
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
