--- a/app/src/main/res/drawable/drawable360.xml
+++ b/app/src/main/res/drawable/drawable360.xml
@@ -1,10 +1,14 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<shape
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
 
-    <corners
-        android:radius="200dp"/>
-    <stroke android:width="2dp" android:color="@color/colorPrimary" />
-    <size android:width="80dp" android:height="80dp"/>
+    <stroke
+        android:width="3dp"
+        android:color="@color/colorPrimary"/>
+
+    <size
+        android:width="10dp"
+        android:height="10dp"/>
 
 </shape>
