--- a/app/src/main/res/layout/homepagelayout.xml
+++ b/app/src/main/res/layout/homepagelayout.xml
@@ -30,10 +30,11 @@
     />
 
 <LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
     android:layout_gravity="end|bottom"
+    android:layout_marginBottom="50dp"
     android:padding="0dp">
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/floating_button"
@@ -105,10 +106,10 @@
         android:focusable="true"
         />
 
+</LinearLayout>
     <include
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         layout="@layout/footerlayout"
-    />
-</LinearLayout>
+        />
 </FrameLayout>
