--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -50,6 +50,14 @@
         <item name="android:textSize">15dp</item>
     </style>
 
-    <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+    <style name="privateDataStyle" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">@color/graydark</item>
+        <item name="android:textSize">20dp</item>
+    </style>
 
+
+    <style name="subPrivateDataStyle" parent="ThemeOverlay.AppCompat.Dark.ActionBar">
+        <item name="android:textColor">@color/graydark</item>
+        <item name="android:textSize">18dp</item>
+    </style>
 </resources>
