--- a/app/src/main/res/layout/communitylayout.xml
+++ b/app/src/main/res/layout/communitylayout.xml
@@ -32,7 +32,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/ic_energy"
+            android:background="@drawable/ic_green_energy"
             android:layout_gravity="center"
         />
 
@@ -90,20 +90,13 @@
 
     </LinearLayout>
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/extradarkgray"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"/>
-
-
     <TextView
         android:id="@+id/forum1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/forumWelcomeText1"
         android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp"
         android:gravity="center"
         style="@style/communityWelcomeText"
         />
